--- a/ecgview/build.gradle
+++ b/ecgview/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "cc.liyongzhi.electrocardiogram"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
@@ -20,9 +19,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.android.support:design:23.2.0'
-    compile project(':ecgview')
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'cc.liyongzhi.androidlogsaver:androidlogsaver:1.0.4'
+
 }
